<resources>
    <string name="app_name">PadHelper</string>
    <string name="news_image_description">News Image Description</string>
    <string name="loading">Loading…</string>
    <string name="badge">徽章</string>
    <string name="team_name">隊伍名稱</string>
    <string name="vice_captain">好友隊長</string>
    <string name="leader">隊長</string>
    <string name="member_1">隊員1</string>
    <string name="team_record">隊伍紀錄</string>
    <string name="member_3">隊員3</string>
    <string name="member_4">隊員4</string>
    <string name="member_2">隊員2</string>
</resources>